hide debug info behind config + bump version